--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <!-- Directions:
-        Put your three image tags here.
-    -->
+   <img src="" alt="" >
+   <img src="" alt="" >
+   <img src="" alt="" >
   </body>
 </html>
