--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-   <img src="" alt="" >
-   <img src="" alt="" >
-   <img src="" alt="" >
+   <img src="pourupdrank.jpg" alt="glass soda bottles">
+   <img src="donutcare" alt="stack of donuts">
+   <img src="breakyheart" alt="heart candy">
   </body>
 </html>
